dev/k8s/spire/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trust-bundle
  namespace: spire
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: bundle
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: bundle
        configMap:
          name: spire-bundle
