dev/k8s/spire/bundle-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: trust-bundle
  namespace: spire
  labels:
    app: nginx
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
