dev/k8s/spire/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spire-server-grpc
  namespace: spire
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 8081
      targetPort: 8081
      protocol: TCP
  selector:
    app: spire-server
