dev/k8s/spire/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spire
  name: spire-ingress
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:

    - hosts:
        - bundle.testifysec.localhost
      secretName: bundle-tls-secret
  rules:
    - host: "bundle.testifysec.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trust-bundle
                port:
                  number: 80
